--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,23 @@
 
 }
 
+.fetch-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title {
+  margin-left: 30px;
+  font-size: 72px;
+}
+
 .main-image {
   display: flex;
   width: 400px;
+  height: 400px;
+  object-fit: cover;
   margin: auto;
   margin-bottom: 30px;
 }
@@ -13,4 +27,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.fetch-next {
+  margin-left: 30px;
+  margin-bottom: 20px;
+  width: 100px;
+  height: 100px;
+  background-color: blueviolet;
+  color: white;
+  cursor: pointer;
 }
