--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
-.App {
-
-}
-
 .fetch-wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
+  margin: 30px;
 }
 
 .title {
-  margin-left: 30px;
+  margin: 30px;
   font-size: 72px;
 }
 
@@ -19,7 +16,6 @@
   width: 400px;
   height: 400px;
   object-fit: cover;
-  margin: auto;
   margin-bottom: 30px;
 }
 
@@ -30,11 +26,14 @@
 }
 
 .fetch-next {
-  margin-left: 30px;
-  margin-bottom: 20px;
+  margin: 20px;
   width: 100px;
   height: 100px;
   background-color: blueviolet;
   color: white;
   cursor: pointer;
+}
+
+.instruction {
+  margin: 20px;
 }
