--- a/src/Queue.css
+++ b/src/Queue.css
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 
 .queue {
     width: 150px;
     height: 450px;
-    background-color:thistle;
+    background-color:rgb(235, 221, 235);
     text-align: center;
     overflow: hidden;
 }
@@ -21,8 +22,22 @@
     color: white;
 }
 
+.image-wrapper {
+    position: relative; 
+    width:  150px;
+    height: 150px;
+    display: block;
+}
+
 .classified-image {
+    display: block;
     width:  150px;
     height: 150px;
     object-fit: cover;
+}
+
+.x-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
